Fix header styling on small screens

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -99,3 +99,7 @@ select:not([multiple])
 @media (max-width: $screen-md-max)
   footer > .container > .row > .col-md-4
     padding: 20px
+
+@media (max-width: $screen-xs-max)
+  .navbar-brand
+    font-size: 16px
